<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".CICTFragment">

    <!-- Centered ImageView with rounded corners (using custom image) -->
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="360dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_img"
        android:clipToOutline="true"
        android:contentDescription="@string/todo"
        android:scaleType="centerCrop"
        android:src="@drawable/cict" />

    <!-- Text section below the image -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:orientation="vertical"
        android:layout_marginTop="20dp">

        <!-- Title TextView centered -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cict_title"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:paddingBottom="10dp"
            android:paddingStart="60dp"
            tools:ignore="RtlSymmetry" />

        <!-- Description TextView below the title -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/obj"
            android:layout_gravity="center"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>

</RelativeLayout>
